--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ extensions/flac/src/main/jni/flac
 
 # FFmpeg extension
 extensions/ffmpeg/src/main/jni/ffmpeg
+extensions/ffmpeg/src/main/jni/ffmpeg-*
 extensions/ffmpeg/.cxx
 extensions/ffmpeg/src/main/jni/include
 
