--- a/extensions/ffmpeg/build.gradle
+++ b/extensions/ffmpeg/build.gradle
@@ -14,6 +14,8 @@
 apply from: "$gradle.ext.exoplayerSettingsDir/common_library_config.gradle"
 
 android {
+    def mkfile = "NDK_APPLICATION_MK=Application.mk"
+
     compileSdkVersion project.ext.compileSdkVersion
 
     compileOptions {
@@ -25,39 +27,51 @@ android {
         minSdkVersion project.ext.minSdkVersion
         targetSdkVersion project.ext.targetSdkVersion
         consumerProguardFiles 'proguard-rules.txt'
-
-        externalNativeBuild {
-            cmake {
-                // Debug CMake build type causes video frames to drop,
-                // so native library should always use Release build type.
-                arguments "-DCMAKE_BUILD_TYPE=Release"
-                targets "ffmpeg"
-            }
-        }
     }
 
-    externalNativeBuild {
-        cmake {
-            version '3.10.2'
-            path "src/main/jni/CMakeLists.txt"
-        }
+    task buildFFmpeg(type: Exec, description: 'Compile FFmpeg source via NDK') {
+        def dir = file('src/main/jni/clone_and_build_ffmpeg.sh').absolutePath
+        commandLine "$dir"
+    }
+    
+    task buildNative(type: Exec, description: 'Compile JNI source via NDK') {
+        def ndkDir = android.ndkDirectory
+        print mkfile
+        commandLine "$ndkDir/ndk-build",
+                mkfile,
+                '-C', file('src/main/jni').absolutePath, // Change src/main/jni the relative path to your jni source
+                '-j', Runtime.runtime.availableProcessors(),
+                'all',
+                'NDK_DEBUG=1',
+                'V=1'                
+    }
+
+    task cleanNative(type: Exec, description: 'Clean JNI object files') {
+        def ndkDir = android.ndkDirectory
+        commandLine "$ndkDir/ndk-build",
+                '-C', file('src/main/jni').absolutePath, // Change src/main/jni the relative path to your jni source
+                'clean'
+    }
+
+    clean.dependsOn 'cleanNative'
+    buildNative.dependsOn 'buildFFmpeg'
+
+    tasks.withType(JavaCompile) {
+        compileTask -> compileTask.dependsOn buildNative
     }
 
     buildTypes {
         debug {
-            ndk {
-                abiFilters 'arm64-v8a'/*, 'x86_64'*/
-            }
+          debuggable true
+          jniDebuggable = true
+          renderscriptDebuggable = true          
         }
     }
 
-    // This option resolves the problem of finding libffmpeg.so
+    // This option resolves the problem of finding libffmpeg_jni.so
     // on multiple paths. The first one found is picked.
     packagingOptions {
-        pickFirst 'lib/arm64-v8a/libffmpeg.so'
-        pickFirst 'lib/armeabi-v7a/libffmpeg.so'
-        pickFirst 'lib/x86/libffmpeg.so'
-        pickFirst 'lib/x86_64/libffmpeg.so'
+        pickFirst 'lib/**/libffmpeg_jni.so'
     }
 
     sourceSets.main {
@@ -65,14 +79,8 @@ android {
         // not needed. However, it exposes the built library and keeps
         // consistency with the other extensions.
         jniLibs.srcDir 'src/main/libs'
+        jni.srcDirs = [] // Disable the automatic ndk-build call by Android Studio.
     }
-}
-
-// Configure the native build only if ffmpeg is present to avoid gradle sync
-// failures if ffmpeg hasn't been built according to the README instructions.
-if (project.file('src/main/jni/ffmpeg').exists()) {
-    android.externalNativeBuild.cmake.path = 'src/main/jni/CMakeLists.txt'
-    android.externalNativeBuild.cmake.version = '3.7.1+'
 }
 
 dependencies {
